--- a/Web/Experiments/First.htm
+++ b/Web/Experiments/First.htm
@@ -2,9 +2,57 @@
 <html>
 	<head>
 		<title>This is my first webpage</title>
+		<link rel="stylesheet" href="first.css">
+		<style>
+			p {		/*Internal*/
+				color:blue;
+			}
+		</style>
 	</head>
 	<body>
-		<p align="center"><font size="5" color="red">Hello!</font></p>
-		<p align="right">How are you?</p>
+		<p style="text-align:center;color:green">Hello!</font></p>
+		<p style="text-align:right;">How are you?</p>
+		<table style="border-style:solid;">
+			<tr>
+				<td>
+					Red
+				</td>
+				
+				<td>
+					Blue
+				</td>
+			</tr>
+			
+			<tr>
+				<td>
+					Green
+				</td>
+				
+				<td>
+					Black
+				</td>
+			
+			</tr>
+		</table>
+		
+		<h1>This is header 1</h1>
+		<h2>This is header 2</h2>
+		<h3>This is header 3</h3>
+		<h4>This is header 4</h4>
+		<h5>This is header 5</h5>
+		<h6>This is header 6</h6>
+		
+		<ul>
+			<li>Book</li>
+			<li>Notebook</li>
+			<li>Paper</li>
+			<li>Pen</li>
+		</ul>
+		
+		<p><a href="First.htm">First</a></p>
+		<p><a href="Second.html">Second</a></p>
+		<p><a href="Third.html">Third</a></p>
+		
+		<p>This is our first page</p>
 	</body>
 </html>
