--- a/Web/Muzaffarpur4U/Lichee.html
+++ b/Web/Muzaffarpur4U/Lichee.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>Template</title>
+		<link rel="stylesheet" href="Site.css">
 	</head>
 	
 	<body leftmargin="0" topmargin="0">
